# utf8

./: .clang-format  CMakeLists.txt  LICENSE  README.md  utf8.c
docs/: config.dox
docs/html/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_enum.html  globals_func.html  index.html  menudata.js  structutf8__block__s-members.html  structutf8__block__s.html  structutf8__file__s-members.html  structutf8__file__s.html  structutf8__string__s-members.html  structutf8__string__s.html  utf8_8h.html  utf8_8h_source.html
docs/html/html/search/: all_0.js  classes_0.js  enums_0.js  files_0.js  functions_0.js  searchdata.js
docs/html/latex/: annotated.tex  files.tex  refman.tex  structutf8__block__s.tex  structutf8__file__s.tex  structutf8__string__s.tex  utf8_8h.tex
examples/: utf8_example_file.c  utf8_example_string.c
src/: utf8.c  utf8.h
